ReAct implementation 2